@@ -4,7 +4,6 @@ import java.util.Arrays;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 
 /**
  * 1. 两数之和
@@ -33,7 +32,7 @@ public class Solution1 {
         // value：元素在数组中的下标
         Map<Integer, Integer> map = new HashMap<>(16);
         for (int i = 0; i < nums.length; i++) {
-            int tmp = target - nums[i];
+            Integer tmp = target - nums[i];
             if (map.containsKey(tmp)) {
                 return new int[]{map.get(tmp), i};
             }
@@ -47,7 +46,7 @@ public class Solution1 {
     public static void main(String[] args) {
         int[] nums = {2, 7, 11, 15};
         int target = 9;
-        List<Integer> indexes = Arrays.stream(twoSum(nums, target)).boxed().collect(Collectors.toList());
+        List<Integer> indexes = Arrays.stream(twoSum(nums, target)).boxed().toList();
         System.out.println("indexes = " + indexes);
     }
 }
